# autoware.iv.universe

./: .clang-format  .gitignore  Readme.md  how_to_use.md  setup_ubuntu16.04.sh  setup_ubuntu18.04.sh  simulation.md
perception/object_recognition/detection/bev_optical_flow/: CMakeLists.txt  README.md  package.xml
perception/object_recognition/detection/bev_optical_flow/launch/: bev_optical_flow.launch
perception/object_recognition/detection/bev_optical_flow/src/: debugger.cpp  flow_calculator.cpp  lidar_to_image.cpp  node.cpp  utils.cpp
perception/object_recognition/detection/object_flow_fusion/: CMakeLists.txt  README.md  package.xml
perception/object_recognition/detection/object_flow_fusion/launch/: object_flow_fusion.launch
perception/object_recognition/detection/object_flow_fusion/src/: node.cpp  object_flow_fusion.cpp  utils.cpp
src/common/math/osqp_interface/: CMakeLists.txt  package.xml
src/common/math/osqp_interface/src/: csc_matrix_conv.cpp  osqp_interface.cpp
src/common/math/planning_utils/: CMakeLists.txt  package.xml
src/common/math/planning_utils/src/: planning_utils.cpp
src/common/msgs/autoware_traffic_light_msgs/: CMakeLists.txt  package.xml
src/common/msgs/autoware_traffic_light_msgs/msg/: LampState.msg  TrafficLightRoiArray.msg  TrafficLightState.msg
src/config/hardware/vehicle_description/: CMakeLists.txt  package.xml
src/config/hardware/vehicle_description/config/: aipxx_calibration.yaml  calibration.yaml  mirror.yaml  sensors_calibration.yaml  vehicle_info.yaml
src/config/hardware/vehicle_description/launch/: test.launch  vehicle_description.launch
src/config/hardware/vehicle_description/src/: additional_vehicle_info_generator_node.cpp
src/config/hardware/vehicle_description/urdf/: aipxx.xacro  vehicle.xacro
src/control/libplanning_utils/: CMakeLists.txt  package.xml
src/control/libplanning_utils/include/libplanning_utils/: planning_utils.h  pure_pursuit.h
src/control/libplanning_utils/src/: interpolate.cpp  planning_utils.cpp  pure_pursuit.cpp
src/control/libplanning_utils/test/: test_libplanning_utils.test  test_pure_pursuit.test
src/control/libplanning_utils/test/src/: test_libplanning_utils.cpp  test_pure_pursuit.cpp
src/control/mpc_follower/: CMakeLists.txt  package.xml
src/control/mpc_follower/config/: mpc_follower_param.yaml  rqt_multiplot_mpc_follower.xml
src/control/mpc_follower/include/mpc_follower/: interpolate.h  lowpass_filter.h  mpc_follower_core.h  mpc_trajectory.h  mpc_utils.h
src/control/mpc_follower/launch/: mpc_debug.launch  mpc_follower.launch
src/control/mpc_follower/src/: interpolate.cpp  lowpass_filter.cpp  mpc_follower_core.cpp  mpc_follower_node.cpp  mpc_trajectory.cpp  mpc_utils.cpp  simulate_steer.py  steer_simulator.py
src/control/mpc_follower/src/qp_solver/: qp_solver_osqp.cpp  qp_solver_qpoases.cpp  qp_solver_unconstr_fast.cpp
src/control/mpc_follower/src/vehicle_model/: vehicle_model_bicycle_dynamics.cpp  vehicle_model_bicycle_kinematics.cpp  vehicle_model_bicycle_kinematics_no_delay.cpp  vehicle_model_interface.cpp
src/control/mpc_follower/test/src/: test_mpc_follower.cpp  test_mpc_lowpass_filter.cpp  test_mpc_utils.cpp
src/control/pure_pursuit/: CMakeLists.txt  package.xml
src/control/pure_pursuit/include/pure_pursuit/: pure_pursuit.h  pure_pursuit_core.h  pure_pursuit_node.h  pure_pursuit_viz.h
src/control/pure_pursuit/launch/: pure_pursuit.launch  pure_pursuit_debug.launch
src/control/pure_pursuit/test/: test_pure_pursuit_core.test  test_pure_pursuit_viz.test
src/control/vehicle_cmd_gate/: CMakeLists.txt  package.xml
src/control/vehicle_cmd_gate/launch/: vehicle_cmd_gate.launch
src/control/vehicle_cmd_gate/src/: vehicle_cmd_filter.cpp  vehicle_cmd_gate.cpp  vehicle_cmd_gate_node.cpp
src/localization/pose_generator/ndt_slam/: CMakeLists.txt  package.xml
src/map/map_file/: CHANGELOG.rst  CMakeLists.txt  README.md  interface.yaml  package.xml
src/map/map_file/launch/: lanelet2_map_loader.launch  map_downloader.launch  map_filter.launch  pointcloud_map_loader.launch
src/perception/detection/lidar_apollo_cnn_seg_detect/: CMakeLists.txt  README.md  package.xml
src/perception/detection/lidar_apollo_instance_segmentation/: CMakeLists.txt  README.md  package.xml
src/perception/prediction/map_based_prediction/: CMakeLists.txt  package.xml
src/perception/traffic_light/traffic_light_fine_detector/: CMakeLists.txt  README.md  package.xml
src/perception/traffic_light_recognition/traffic_light_classifier/: CMakeLists.txt  package.xml
src/planning/mission_planning/mission_planner/: CMakeLists.txt  package.xml
src/planning/motion_planning/motion_base_planner/: CMakeLists.txt  package.xml
src/planning/motion_planning/motion_planner/: CMakeLists.txt  package.xml
src/temporary/motion_path_planner_scene_test/: CMakeLists.txt  dummy_perception.diff.patch  kashiwanoha_avoid_test.py  kashiwanoha_avoid_test_all.py  mpc_param_for_motion_plan_test.diff.patch  package.xml  report.csv
src/temporary/motion_path_planner_scene_test/launch/: motion_path_planner_test.launch  motion_path_planner_test_all.launch
src/temporary/motion_path_planner_scene_test/scene/: 0.bag  1.bag  10.bag  11.bag  12.bag  13.bag  14.bag  15.bag  16.bag  17.bag  18.bag  19.bag  2.bag  20.bag  21.bag  22.bag  23.bag  24.bag  25.bag  26.bag  27.bag  28.bag  29.bag  3.bag  30.bag  31.bag  32.bag  33.bag  34.bag  35.bag  36.bag  37.bag  38.bag  39.bag  4.bag  40.bag  41.bag  42.bag  43.bag  44.bag  (+21 more)
src/temporary/motion_path_planner_scene_test/scripts/: kashiwanoha_avoid_test.py  kashiwanoha_avoid_test_all.py  reset_obstacle.py
src/vehicle/accel_map_converter/: CMakeLists.txt  package.xml
src/vehicle/accel_map_converter/launch/: accel_map_converter.launch
src/vehicle/accel_map_converter/src/: accel_map.cpp  brake_map.cpp  csv_loader.cpp  interpolate.cpp  main.cpp  node.cpp  test_accel_map_converter.cpp
src/vehicle/as/: CMakeLists.txt  README.md.rej  package.xml
src/vehicle/as/launch/: lexus_converter.launch  lexus_interface.launch  pacmod_interface.launch  ssc_interface.launch
(+2213 files in other folders)
