<?xml version="1.0"?>
<package format="2">
  <name>motion_path_planner_scene_test</name>
  <version>0.1.0</version>
  <description>The motion_path_planner_scene_test package</description>

  <maintainer email="horibe.takamasa@gmail.com">Takamasa Horibe</maintainer>

  <license>Apache 2</license>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- <depend>roscpp</depend> -->

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
