<?xml version="1.0"?>
<package format="2">
  <name>accel_map_converter</name>
  <version>1.12.0</version>
  <description>The accel_map_converter package</description>
  <maintainer email="horibe.takamasa@gmail.com">Horibe Takamasa</maintainer>
  <author email="horibe.takamasa@gmail.com">Horibe Takamasa</author>
  <license>Apache 2</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>autoware_vehicle_msgs</depend>
  <depend>geometry_msgs</depend>
</package>
