<?xml version="1.0"?>
<package>
  <name>object_flow_fusion</name>
  <version>0.1.0</version>
  <description>The object_flow_fusion package</description>

  <maintainer email="taichi.higashide@tier4.jp">Taichi Higashide</maintainer>
  <license>Apache2</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>autoware_perception_msgs</build_depend>
  <build_depend>eigen_conversions</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>pcl_conversions</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>autoware_perception_msgs</run_depend>
  <run_depend>eigen_conversions</run_depend>

  <export>
  </export>

</package>
