<?xml version="1.0"?>
<package format="2">
  <name>planning_utils</name>
  <version>0.0.0</version>
  <description>The planning_utils package</description>
  <maintainer email="horibe.takamasa@gmail.com">Takamasa Horibe</maintainer>
  <license>Apache 2</license>

  <buildtool_depend>catkin</buildtool_depend>

  
  <depend>roscpp</depend>
  <depend>rostest</depend>
  <depend>rosunit</depend>
  <depend>autoware_planning_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2</depend>
  
</package>
