<?xml version="1.0"?>
<package>
  <name>autoware_traffic_light_msgs</name>
  <version>1.11.0</version>
  <description>The autoware_traffic_light_msgs package</description>
  <maintainer email="yukihiro.saito@tier4.jp">Yukihiro Saito</maintainer>
  <license>Apache2</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <export>
  </export>
</package>
