<?xml version="1.0"?>
<package format="2">
  <name>vehicle_description</name>
  <version>1.11.0</version>
  <description>The vehicle_description package</description>

  <maintainer email="yukihiro.saito@tier4.jp">Yukihiro Saito</maintainer>
  <license>Apache2</license>


  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>camera_description</exec_depend>
  <exec_depend>imu_description</exec_depend>
  <exec_depend>velodyne_description</exec_depend>

  <depend>roscpp</depend>
  <export>
  </export>
</package>
